--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Petition</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="petition1.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/cowbell-icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <header>
+        
+        
+            <a class="link" href="/">
+            <img class="iconHeader" src="/assets/cowbell-icon.png" alt="" srcset="">
+            </a>
+      
         <a class="link" href="/">We Need More Cowbell!</a>
         <p>the unofficial petition</p>        
     </header>
     <div id="content-wrap">
         {{{body}}}
-    </div>
+    </div>    
     <footer>
         <p>This website was built entirely with PostgreSQL and express handlbares templates</p>        
         <p>© Ariel Moatti 2020</p>
