--- a/views/signerslist.handlebars
+++ b/views/signerslist.handlebars
@@ -22,5 +22,6 @@
                 </h2>
             {{/rows}}
         </div>
+        <a href="/thank-you" class="myBtn">back</a>
     </div>
 </div>
