--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,20 +1,31 @@
 {{>cornerBtn register=true}}
-<div class="register">
-    <h1>welcome to my cowbell petition!</h1>
-    <h2>please take a moment to register</h2>
-    <div class="container">            
-        <form method='POST'>
-            <input type='text' name='firstname' placeholder='* First Name' autocomplete='off'>
-            <input type='text' name='lastname' placeholder='* Last Name' autocomplete='off'>
-            <input type='email' name='email' placeholder='* Email Address' autocomplete='off'>
-            <input type='password' name='password' placeholder='* Password' autocomplete='off'>            
-            {{>csrf}}
-            <button type="submit">register now</button>
-        </form>
-        <p>already registered? then please <a class="link" href="/login">log in</a></p>
-        
-        {{#if message}}
-            {{>msgBox}}
-        {{/if}}        
+<div class="main">    
+    <div class="containerLeft">
+        <div class="imgContainer">
+            <img class="danceGif" src="/assets/cowbell.gif" alt="dancing Gene Frenkle">
+        </div>
+        <div class="text">
+            <p><i>"guess what! I've got a fever, and the only prescription is <b>more cowbell!</b></i>"</p>
+            <p><small>(The Bruce Dickinson, 1976)</small></p>
+        </div>
+    </div>    
+    <div class="registerRight">
+        <h1>welcome to my cowbell petition!</h1>
+        <h2>please take a moment to register</h2>
+        <div class="container">            
+            <form method='POST'>
+                <input type='text' name='firstname' placeholder='First Name *' autocomplete='off'>
+                <input type='text' name='lastname' placeholder='Last Name *' autocomplete='off'>
+                <input type='email' name='email' placeholder='Email Address *' autocomplete='off'>
+                <input type='password' name='password' placeholder='Password *' autocomplete='off'>            
+                {{>csrf}}
+                <button type="submit">register now</button>
+            </form>
+            <p>already registered? then please <a class="link" href="/login">log in</a></p>
+            
+            {{#if message}}
+                {{>msgBox}}
+            {{/if}}        
+        </div>
     </div>
 </div>
