--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -4,14 +4,14 @@
     <div class="container">            
         <form method='POST'>
             {{#rows}}
-                <input type='text' name='firstname' value="{{first}}" placeholder='* First Name' autocomplete='off' >
-                <input type='text' name='lastname' value="{{last}}" placeholder='* Last Name' autocomplete='off'>
-                <input type='email' name='email' value="{{email}}" placeholder='* Email Address' autocomplete='off'>
-                <input type='password' name='password' placeholder='* Password' autocomplete='off'>                
+                <input type='text' name='firstname' value="{{first}}" placeholder='First Name *' autocomplete='off' >
+                <input type='text' name='lastname' value="{{last}}" placeholder='Last Name *' autocomplete='off'>
+                <input type='email' name='email' value="{{email}}" placeholder='Email Address *' autocomplete='off'>
+                <input type='password' name='password' placeholder='Password *' autocomplete='off'>                
                 <input type='text' name='age' value="{{age}}" placeholder='Age' autocomplete='off' pattern="^[0-9]*$">
                 <input type='text' name='city' value="{{city}}" placeholder='City' autocomplete='off' pattern="^[a-zA-Z ]+$">
-                <input type='url' name='url' value="{{url}}" placeholder='Website' autocomplete='off' pattern="https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_\+.~#?&amp;//=]*)">
-                
+                <input type='url' name='url' value="{{url}}" placeholder='Website' autocomplete='off' pattern="https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_\+.~#?&amp;//=]*)">                
+                <label for="url">type your homepage or a website you like.<br>Note: it will be seen by visitors of my petition</label>
             {{/rows}}
                 {{>csrf}}
             <button type="submit">update</button>
