--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,20 +10,21 @@
 </head>
 <body>
     <header>
-        
-        
-            <a class="link" href="/">
-            <img class="iconHeader" src="/assets/cowbell-icon.png" alt="" srcset="">
-            </a>
-      
-        <a class="link" href="/">We Need More Cowbell!</a>
-        <p>the unofficial petition</p>        
+            
+                <a class="link" href="/">
+                    <img class="iconHeader" src="/assets/cowbell-icon.png" alt="" srcset="">
+                </a>
+            
+            
+                <a class="link" href="/">We Need More Cowbell!</a>
+                <p>the unofficial petition</p>        
+            
     </header>
     <div id="content-wrap">
         {{{body}}}
     </div>    
     <footer>
-        <p>This website was built entirely with PostgreSQL and express handlbares templates</p>        
+        <p>This website was built entirely with PostgreSQL and express handlebars templates</p>        
         <p>© Ariel Moatti 2020</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
