--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,6 +7,7 @@
         <div class="text">
             <p><i>" guess what! I've got a fever, and the only prescription is <b>more cowbell!</b></i> "</p>
             <p><small>(The Bruce Dickinson, 1976)</small></p>
+            <div class="empty"></div>
         </div>
     </div>    
     <div class="login">
