--- a/views/signerslist.handlebars
+++ b/views/signerslist.handlebars
@@ -23,5 +23,6 @@
             {{/rows}}
         </div>
         <a href="/thank-you" class="myBtn">back</a>
+        <div class="empty"></div>
     </div>
 </div>
