--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -18,8 +18,8 @@
                 {{>csrf}}
             </form>
         </div>
+        <div class="empty"></div>
     </div>
-    {{!-- <div class="empty"></div> --}}
     {{#if message}}
             {{>msgBox}}
         {{/if}} 
