--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -7,6 +7,7 @@
         <div class="text">
             <p><i>"guess what! I've got a fever, and the only prescription is <b>more cowbell!</b></i>"</p>
             <p><small>(The Bruce Dickinson, 1976)</small></p>
+            <div class="empty"></div>
         </div>
     </div>    
     <div class="registerRight">
@@ -14,8 +15,8 @@
         <h2>please take a moment to register</h2>
         <div class="container">            
             <form method='POST'>
-                <input type='text' name='firstname' placeholder='First Name *' autocomplete='off'>
-                <input type='text' name='lastname' placeholder='Last Name *' autocomplete='off'>
+                <input type='text' name='firstname' placeholder='First Name *' autocomplete='off' pattern="^[a-zA-Z ]+$">
+                <input type='text' name='lastname' placeholder='Last Name *' autocomplete='off' pattern="^[a-zA-Z ]+$">
                 <input type='email' name='email' placeholder='Email Address *' autocomplete='off'>
                 <input type='password' name='password' placeholder='Password *' autocomplete='off'>            
                 {{>csrf}}
@@ -28,4 +29,5 @@
             {{/if}}        
         </div>
     </div>
+        
 </div>
