heroku push version 1.6

--- a/views/signerslist.handlebars
+++ b/views/signerslist.handlebars
@@ -1,7 +1,7 @@
 {{>cornerBtn logged=true}}
 <div class="signers">
     <h1>supporters who need more cowbell:</h1>
-    <div class="container">
+    <div class="list">
         <div>
             {{#rows}}
                 <h2 class="signerList">
