--- a/public/style.css
+++ b/public/style.css
@@ -305,3 +305,13 @@ label {
 h2.signerList {
     font-size: 2.5vw;
 }
+
+.list {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 90vw;
+    /* height: 100vh; */
+    /* padding: 10px; */
+}
