heroku push version 1.8

--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -4,7 +4,7 @@
         <h1>welcome to my petition, {{first}}!</h1>
     {{/rows}}
         <a href="https://vimeo.com/406011330" target="_blank">
-        <div class="imgContainer bruce">
+        <div title="click here to get inspired!" class="imgContainer bruce">
             <img src="/assets/Walken-Cowbell.jpg" alt="" srcset="">
         </div>
         </a>
