--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,7 @@
 {{>cornerBtn logged=true}}
 <div class="profile">
-    <h2>please provide some personal information</h2>    
+    <h2>please provide some personal information</h2>
+    <span><small>(this is purely optional)</small></span>   
     <div class="container">            
         <form method='POST'>            
             <input type='text' name='age' placeholder='Age' autocomplete='off' pattern="^[0-9]*$">
