--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -5,15 +5,14 @@
     {{/rows}}
         <a href="https://vimeo.com/406011330" target="_blank">
         <div title="click here to get inspired!" class="imgContainer bruce">
-            <img src="/assets/Walken-Cowbell.jpg" alt="" srcset="">
+            <img src="/assets/Walken-Cowbell.jpg" alt="" srcset="">            
         </div>
         </a>
-
         <h2>cowbell... what a lovely sound... we definitely need more of it!</h2>
-        <p>Our world is pretty dull. Bands all around are releasing songs every day, and some do appears to be having a dynamite sound, but what they really need is simply more cowbell! I am positive, that every song MUST include more
-        cowbell than what is regularly considered "enough". My petition is all about adding more cowbell to <strong>every</strong> song out there.
+        <p>music nowadays tends to be pretty dull. Bands all over the world are releasing songs daily - and while some <strong>do appear to be having a dynamite sound</strong>, what they really need is simply... more cowbell! I am positive, that every song MUST include more
+        of it - much more than what is regularly considered "enough". My petition is all about adding more cowbell to <strong>every</strong> song out there.
         </p>
-        <h2>looks likes you haven't yet signed the petition...</h2>
+        <h2>well, it looks likes you haven't yet signed the petition...</h2>
     <h3>if you believe that more cowbell is needed</a>  in our world, <br>please sign your name <small> (using the mouse)</small></h3>
     <div class="container">            
         <form method='POST'>            
