--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,9 +4,12 @@
     <span><small>(this is purely optional)</small></span>   
     <div class="container">            
         <form method='POST'>            
-            <input type='text' name='age' placeholder='Age' autocomplete='off' pattern="^[0-9]*$">
+            <input type='text' name='age' placeholder='Age' autocomplete='off'>
+            <input type='text' name='city' placeholder='City' autocomplete='off'>
+            <input type='text' name='url' placeholder='Website' autocomplete='off'>
+            {{!-- <input type='text' name='age' placeholder='Age' autocomplete='off' pattern="^[0-9]*$">
             <input type='text' name='city' placeholder='City' autocomplete='off' pattern="^[a-zA-Z ]+$">
-            <input type='url' name='url' placeholder='Website' autocomplete='off' pattern="https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_\+.~#?&amp;//=]*)">
+            <input type='url' name='url' placeholder='Website' autocomplete='off' pattern="https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_\+.~#?&amp;//=]*)"> --}}
             <label for="url">type your homepage or a website you like.<br>Note: it will be seen by visitors of my petition</label>
             {{>csrf}}
             <button type="submit">continue</button>
