--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,7 @@
         <p>This website was built entirely with PostgreSQL and express handlebars templates</p>        
         <p>© Ariel Moatti 2020</p>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="script.js" charset="utf-8"></script>
 </body>
 </html>
