--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
         {{{body}}}
     </div>    
     <footer>
-        <p>This website was built entirely with PostgreSQL and express handlebars templates</p>        
+        <p>This website was built entirely with PostgreSQL and Express Handlebars templates</p>        
         <p>© Ariel Moatti 2020</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
